--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ django-summernote==0.8.20.0
 gunicorn==21.2.0
 oauthlib==3.2.2
 pillow==10.2.0
+postgres==4.0
 psycopg==3.1.17
+psycopg2-binary==2.9.9
+psycopg2-pool==1.2
 PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
