--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.7.2
+cloudinary==1.39.0
 dj-database-url==2.1.0
 Django==4.2.9
 django-allauth==0.61.1
+django-cloudinary-storage==0.3.0
 django-summernote==0.8.20.0
 gunicorn==21.2.0
+iniconfig==2.0.0
 oauthlib==3.2.2
 pillow==10.2.0
+pluggy==1.4.0
 postgres==4.0
 psycopg==3.1.17
 psycopg2-binary==2.9.9
 psycopg2-pool==1.2
 PyJWT==2.8.0
+pytest==8.0.2
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
