--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 cloudinary==1.39.0
+coverage==7.4.4
 dj-database-url==2.1.0
 Django==4.2.9
 django-allauth==0.61.1
@@ -19,4 +20,5 @@ pytest==8.0.2
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+vulture==2.11
 whitenoise==6.6.0
