--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ dj-database-url==2.1.0
 Django==4.2.9
 django-allauth==0.61.1
 django-cloudinary-storage==0.3.0
+django-extensions==3.2.3
 django-summernote==0.8.20.0
+googlemaps==4.10.0
 gunicorn==21.2.0
 iniconfig==2.0.0
 oauthlib==3.2.2
@@ -15,7 +17,10 @@ postgres==4.0
 psycopg==3.1.17
 psycopg2-binary==2.9.9
 psycopg2-pool==1.2
+pydot==2.0.0
+pygraphviz==1.12
 PyJWT==2.8.0
+pyparsing==3.1.2
 pytest==8.0.2
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
